Minor fix to add a code block around a file path

--- a/manuals/2.4.0/4/2/3_-_Distro_Signatures.html
+++ b/manuals/2.4.0/4/2/3_-_Distro_Signatures.html
@@ -105,7 +105,7 @@ var WRInitTime=(new Date()).getTime();
 
 <h3>Distro Signatures File</h3>
 
-<p>The distro signatures are stored in <strong>/var/lib/cobbler/distro_signatures.json</strong>. As the extension indicates, this is a JSON-formatted file, with the following structure:</p>
+<p>The distro signatures are stored in <code>/var/lib/cobbler/distro_signatures.json</code>. As the extension indicates, this is a JSON-formatted file, with the following structure:</p>
 
 <p>This file is read in when cobblerd starts, and logs a message noting how many breeds and os-versions it has loaded:</p>
 
