--- a/manuals/2.2.3/5/18/1_-_CouchDB.html
+++ b/manuals/2.2.3/5/18/1_-_CouchDB.html
@@ -114,8 +114,7 @@ var WRInitTime=(new Date()).getTime();
 <span class="na">system</span> <span class="o">=</span> <span class="s">serializer_couchdb</span>
 <span class="na">repo</span> <span class="o">=</span> <span class="s">serializer_couchdb</span>
 <span class="err">etc...</span>
-</code></pre>
-</div>
+</code></pre></div>
 
 
 <p><strong>NOTE</strong> Be sure to leave the settings serializer set to serializer_catalog.</p>
