--- a/manuals/2.4.0/4/2/12_-_Version.html
+++ b/manuals/2.4.0/4/2/12_-_Version.html
@@ -107,8 +107,7 @@ var WRInitTime=(new Date()).getTime();
 Cobbler 2.4.0
   <span class="nb">source</span>: aadd4ef, Sun Nov 18 10:08:15 2012 -0600
   build <span class="nb">time</span>: Sun Nov 25 11:45:24 2012
-</code></pre>
-</div>
+</code></pre></div>
 
 
 <p>The first piece of information is the version. The second line includes information regarding the associated commit for this version. In official releases, this should correspond to the commit for which the build was tagged in git. The final line is the build time, which could be the time the RPM was built, or when the "make" command was run when installing from source.</p>
