--- a/manuals/2.4.0/4/2/1_-_Check.html
+++ b/manuals/2.4.0/4/2/1_-_Check.html
@@ -115,8 +115,7 @@ The following are potential configuration items that you may want to fix:
 4 : Dynamic settings changes are enabled, be sure you run <span class="s2">&quot;sed -i &#39;s/^[[:space:]]\+/ /&#39; /etc/cobbler/settings&quot;</span> to ensure the settings file is properly indented
 
 Restart cobblerd and <span class="k">then </span>run <span class="s1">&#39;cobbler sync&#39;</span> to apply changes.
-</code></pre>
-</div>
+</code></pre></div>
 
 
 
