--- a/manuals/2.4.0/5/1/4_-_Bonded_Bridging.html
+++ b/manuals/2.4.0/5/1/4_-_Bonded_Bridging.html
@@ -112,8 +112,7 @@ var WRInitTime=(new Date()).getTime();
 <span class="nv">$ </span>cobbler system edit --name<span class="o">=</span>foo --interface<span class="o">=</span>br0 --interface-type<span class="o">=</span>bridge <span class="se">\</span>
                       --bridge-opts<span class="o">=</span><span class="s2">&quot;stp=no&quot;</span> --ip-address<span class="o">=</span>192.168.1.100 <span class="se">\</span>
                       --netmask<span class="o">=</span>255.255.255.0 --static<span class="o">=</span>1
-</code></pre>
-</div>
+</code></pre></div>
 
 
 <p><strong>NOTE</strong> Please reference the <a href="/manuals/2.4.0/5/1/1_-_Bonding.html">Advanced Networking - Bonding</a> and <a href="/manuals/2.4.0/5/1/3_-_Bridging.html">Advanced Networking - Bridging</a> sections for requirements specific to each of these interface types.</p>
