--- a/manuals/2.4.0/5/18/3_-_MySQL.html
+++ b/manuals/2.4.0/5/18/3_-_MySQL.html
@@ -112,8 +112,7 @@ var WRInitTime=(new Date()).getTime();
 <span class="na">system</span> <span class="o">=</span> <span class="s">serializer_mysql</span>
 <span class="na">repo</span> <span class="o">=</span> <span class="s">serializer_mysql</span>
 <span class="err">etc...</span>
-</code></pre>
-</div>
+</code></pre></div>
 
 
 <p><strong>NOTE</strong> Be sure to leave the settings serializer set to serializer_catalog.</p>
@@ -132,8 +131,7 @@ var WRInitTime=(new Date()).getTime();
 <span class="k">CREATE</span> <span class="k">TABLE</span> <span class="n">mgmtclass</span> <span class="p">(</span><span class="n">name</span> <span class="nb">VARCHAR</span><span class="p">(</span><span class="mi">100</span><span class="p">)</span> <span class="k">NOT</span> <span class="k">NULL</span> <span class="k">PRIMARY</span> <span class="k">KEY</span><span class="p">,</span> <span class="k">data</span> <span class="nb">TEXT</span><span class="p">)</span> <span class="n">ENGINE</span><span class="o">=</span><span class="n">innodb</span><span class="p">;</span>
 <span class="k">CREATE</span> <span class="k">TABLE</span> <span class="n">file</span> <span class="p">(</span><span class="n">name</span> <span class="nb">VARCHAR</span><span class="p">(</span><span class="mi">100</span><span class="p">)</span> <span class="k">NOT</span> <span class="k">NULL</span> <span class="k">PRIMARY</span> <span class="k">KEY</span><span class="p">,</span> <span class="k">data</span> <span class="nb">TEXT</span><span class="p">)</span> <span class="n">ENGINE</span><span class="o">=</span><span class="n">innodb</span><span class="p">;</span>
 <span class="k">CREATE</span> <span class="k">TABLE</span> <span class="n">package</span> <span class="p">(</span><span class="n">name</span> <span class="nb">VARCHAR</span><span class="p">(</span><span class="mi">100</span><span class="p">)</span> <span class="k">NOT</span> <span class="k">NULL</span> <span class="k">PRIMARY</span> <span class="k">KEY</span><span class="p">,</span> <span class="k">data</span> <span class="nb">TEXT</span><span class="p">)</span> <span class="n">ENGINE</span><span class="o">=</span><span class="n">innodb</span><span class="p">;</span>
-</code></pre>
-</div>
+</code></pre></div>
 
 
 <h3>MySQL Configuration File</h3>
