--- a/manuals/2.4.0/3/6_-_Installation_Notes.html
+++ b/manuals/2.4.0/3/6_-_Installation_Notes.html
@@ -124,8 +124,7 @@ var WRInitTime=(new Date()).getTime();
 <span class="nv">$ </span>ln -s /srv/tftp /var/lib/tftpboot
 
 <span class="nv">$ </span>chown www-data /var/lib/cobbler/webui_sessions
-</code></pre>
-</div>
+</code></pre></div>
 
 
 <ul>
