Updated passthru documentation

--- a/manuals/2.4.0/6/2/5_-_Passthru.html
+++ b/manuals/2.4.0/6/2/5_-_Passthru.html
@@ -90,7 +90,9 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0">2.4.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0/6_-_Web_Interface.html">6</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0/6/2_-_Web_Authentication.html">2</a> <span class="divider">/</span></li><li class="active">Passthru Authentication</li></ul>
    <h1>Passthru Authentication</h1>
-<p>As of Cobbler 2.2.0, passthru authentication with Apache is no longer supported due to the fact that we have moved to a session/token based authentication and form-based login scheme with the new Web UI. Unfortunately, passthru authentication does not work with this method, so we now recommend using PAM or one of the other authentication schemes.</p>
+<p>Passthru authentication has been added back to Cobbler Web as of version 2.4.0.  Passthru authentication allows you to setup your webserver to perform authentication and Cobbler Web will use the value of REMOTE_USER to determine authorization.  Using this authentication module disables the normal web form authentication which was added in Cobbler Web 2.2.0.  If you prefer to use web form authentication we recommend using PAM or one of the other authentication schemes.</p>
+
+<p>A common reason you might want to use Passthru authentication is to provide support for single sign on authentication like Kerberos.  An example of setting this up can be found <a href="http://linux3.julienfamily.com/manuals/2.4.0/6/2/3_-_Kerberos.html">here.</a></p>
 
   </div>
   <div class="span4">
