Added quantcast logo as a supporter (platinum) and user

--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@ $('document').ready(function() {
      </div>
      <div class="row-fluid supporter">
       <div class="span6"><a href="http://www.spilgames.com/careers/"><img src="/images/supporters/spilgames.png" /></a></div>
-      <div class="span6"><a href="http://www.puzzle.ch/"><img src="/images/supporters/puzzleitc.png" /></a></div>
+      <div class="span6"><a href="http://www.quantcast.com/"><img src="/images/supporters/quantcast.png" /></a></div>
      </div>
      <div class="row-fluid supporter">
       <div class="span6"><a href="http://www.fedoraproject.org/"><img src="/images/supporters/fedora.png" /></a></div>
+      <div class="span6"><a href="http://www.puzzle.ch/"><img src="/images/supporters/puzzleitc.png" /></a></div>
      </div>
      <div class="viewall"><a href="/supporters.html"><i class="icon-double-angle-right"> view all supporters</i></a></div>
     </div>
@@ -270,6 +271,10 @@ $('document').ready(function() {
 
     <div class="item">
      <div><img class="carousel-img" src="/images/who/puzzleitc_logo_sm.png" alt="" /></div>
+    </div>
+
+    <div class="item">
+     <div><img class="carousel-img" src="/images/who/quantcast_logo_sm.png" alt="" /></div>
     </div>
 
     <div class="item">
