--- a/supporters.html
+++ b/supporters.html
@@ -102,7 +102,7 @@ var WRInitTime=(new Date()).getTime();
 
 <p> Puzzle ITC</p>
 
-<p> Andrew Dibble</p>
+<p> Quantcast</p>
 
 <h2>Gold Supporters</h2>
 
