--- a/users.html
+++ b/users.html
@@ -167,11 +167,15 @@ var WRInitTime=(new Date()).getTime();
  
  
 
-  <div class="span3 userlogo"><a href="http://speakeasy.net"><img src="/images/who/speakeasy_logo_sm.png" alt="" /></a></div>
+  <div class="span3 userlogo"><a href="http://www.quantcast.com/"><img src="/images/who/quantcast_logo_sm.png" alt="" /></a></div>
  
  
  </div>
  <div class="row-fluid">
+ 
+
+  <div class="span3 userlogo"><a href="http://speakeasy.net"><img src="/images/who/speakeasy_logo_sm.png" alt="" /></a></div>
+ 
  
 
   <div class="span3 userlogo"><a href="http://imageworks.com/"><img src="/images/who/spi_logo_sm.png" alt="" /></a></div>
@@ -185,12 +189,12 @@ var WRInitTime=(new Date()).getTime();
   <div class="span3 userlogo"><a href="http://www.stone-it.com"><img src="/images/who/stoneit_logo_sm.png" alt="" /></a></div>
  
  
+ </div>
+ <div class="row-fluid">
+ 
 
   <div class="span3 userlogo"><a href="http://library.stanford.edu"><img src="/images/who/sulair_logo_sm.png" alt="" /></a></div>
  
- 
- </div>
- <div class="row-fluid">
  
 
   <div class="span3 userlogo"><a href="http://www.potsdam.edu"><img src="/images/who/sunypotsdam_logo_sm.png" alt="" /></a></div>
@@ -204,12 +208,12 @@ var WRInitTime=(new Date()).getTime();
   <div class="span3 userlogo"><a href="http://www.triple-it.nl/"><img src="/images/who/tripleit_logo_sm.png" alt="" /></a></div>
  
  
+ </div>
+ <div class="row-fluid">
+ 
 
   <div class="span3 userlogo"><a href="http://www.widexs.nl"><img src="/images/who/widexs_logo_sm.png" alt="" /></a></div>
  
- 
- </div>
- <div class="row-fluid">
  
 
  </div>
