--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ $('document').ready(function() {
       <div class="span6"><a href="http://www.ansibleworks.com/"><img src="/images/supporters/ansible.png" /></a></div>
      </div>
      <div class="row-fluid supporter">
-      <div class="span6"><a href="http://www.spilgames.com/careers/"><img src="/images/supporters/spilgames.png" /></a></div>
+      <div class="span6"><a href="http://spil.com/cobbler"><img src="/images/supporters/spilgames.png" /></a></div>
       <div class="span6"><a href="http://www.quantcast.com/"><img src="/images/supporters/quantcast.png" /></a></div>
      </div>
      <div class="row-fluid supporter">
