--- a/manuals/2.4.0/3/1_-_Prerequisites.html
+++ b/manuals/2.4.0/3/1_-_Prerequisites.html
@@ -103,12 +103,14 @@ var WRInitTime=(new Date()).getTime();
 <li>httpd (apache2 for Debian/Ubuntu)</li>
 <li>mkisofs</li>
 <li>mod_wsgi (libapache2-mod-wsgi for Debian/Ubuntu)</li>
+<li>mod_ssl (libapache2-mod-ssl)</li>
 <li>python-cheetah</li>
 <li>python-netaddr</li>
 <li>python-simplejson</li>
 <li>python-urlgrabber</li>
 <li>PyYAML (python-yaml for Debian/Ubuntu)</li>
 <li>rsync</li>
+<li>syslinux</li>
 <li>tftp-server (atftpd for Debian/Ubuntu, though others <em>may</em> work)</li>
 <li>yum-utils</li>
 </ul>
