Updating spilgames urls

--- a/users.html
+++ b/users.html
@@ -182,7 +182,7 @@ var WRInitTime=(new Date()).getTime();
  
  
 
-  <div class="span3 userlogo"><a href="http://www.spilgames.com/careers/"><img src="/images/who/spilgames_logo_sm.png" alt="" /></a></div>
+  <div class="span3 userlogo"><a href="http://spil.com/cobbler"><img src="/images/who/spilgames_logo_sm.png" alt="" /></a></div>
  
  
 
