--- a/manuals/2.2.3/1_-_About_Cobbler.html
+++ b/manuals/2.2.3/1_-_About_Cobbler.html
@@ -117,7 +117,7 @@ var WRInitTime=(new Date()).getTime();
    <h1>Introduction to Cobbler</h1>
 <p>Cobbler is a build and deployment system. The primary functionality of cobbler is to simplify the lives of administrators by automating repetive actions, and to encourage reuse of existing work through the use of templating.</p>
 
-<p>One of the primary tenants we follow is to provide options and flexibility rather than locking administrators into a single way of doing things. As such, cobbler can be integrated with a growing number of configuration management systems and remote scripting utilities while enabling deployment of many different operating system types.</p>
+<p>One of the primary tenets we follow is to provide options and flexibility rather than locking administrators into a single way of doing things. As such, cobbler can be integrated with a growing number of configuration management systems and remote scripting utilities while enabling deployment of many different operating system types.</p>
 
 <p>Cobbler also provides a tool (koan) for simplifying virtualization deployments, with plans to expand this functionality to more of the F/OSS cloud platforms in the future.</p>
 
