Updating verbage on the community page, and move the github section up

--- a/community.html
+++ b/community.html
@@ -122,6 +122,10 @@ var WRInitTime=(new Date()).getTime();
 
 <p>Development questions/code should be sent here: <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">cobbler-devel@lists.fedorahosted.org</a>. If you're sending patches for review, please be sure to read the "Developer Documentation" section of the manual first.</p>
 
+<h2>Github</h2>
+
+<p>The site menu has links to the github.com source and issues lists. If you have an issue, open a ticket so we can take care of it! The wiki is being migrated to the manuals, and will be deprecated in the future in favor of the documentation on this site.</p>
+
 <h2>IRC Channels</h2>
 
 <p>You must join the mailing lists above in order to use them. If that's not your cup of tea, Cobbler has two IRC channels on Freenode:</p>
@@ -137,10 +141,6 @@ var WRInitTime=(new Date()).getTime();
 <h2>Twitter</h2>
 
 <p>We use the twitter account <a href="http://twitter.com/#!/cobblerista">@cobblerista</a> to post notifications of new versions and other relevant information.</p>
-
-<h2>Github</h2>
-
-<p>The menu to the left has links to the github.com source and issues lists. If you have an issue, open a ticket so we can take care of it! The wiki is being migrated to the manuals, and will be deprecated in the future in favor of the documentation on this site.</p>
 
 </div> <!-- end wrap -->
 
