--- a/manuals/2.4.0/8_-_Developer_Documentation.html
+++ b/manuals/2.4.0/8_-_Developer_Documentation.html
@@ -133,8 +133,8 @@ var WRInitTime=(new Date()).getTime();
 <p>Various information about how to get involved with the Cobbler project.</p>
 
 <ul>
-<li> <a href="Patch%20Process">Patch Process</a> -- How to contribute code/patches/docs</li>
-<li> <a href="Development%20Environment%20Tips">Development Environment Tips</a> -- How to get your development setup going</li>
+<li> <a href="/manuals/2.4.0/8/Patch-process.html">Patch Process</a> -- How to contribute code/patches/docs</li>
+<li> <a href="/manuals/2.4.0/8/Development-environment-tips.html">Development Environment Tips</a> -- How to get your development setup going</li>
 </ul>
 
 
