Fix more links.

--- a/manuals/2.4.0/8_-_Developer_Documentation.html
+++ b/manuals/2.4.0/8_-_Developer_Documentation.html
@@ -148,9 +148,9 @@ and examples, so you're expected to be able to read Python.  That should be ok t
 <p>XMLRPC API is used to interact with cobbler via the cobblerd daemon.  In addition, cobbler can be extended via trigger modules (or scripts), as well as plugin modules.   If using Cobbler as service, start with the XMLRPC interface... accessing the Python code directly is not supported.</p>
 
 <ul>
-<li> <a href="XMLRPC">XMLRPC</a> -- main API walkthrough for end users</li>
-<li> <a href="Triggers">Triggers</a> -- triggers, do X when cobbler does Y</li>
-<li> <a href="Modules">Modules</a> -- extend Cobbler authentication, authorization, or serialization via plugins</li>
+<li> <a href="/manuals/2.4.0/8/Xmlrpc.html">XMLRPC</a> -- main API walkthrough for end users</li>
+<li> <a href="/manuals/2.4.0/5/5/1_-_Triggers.html">Triggers</a> -- triggers, do X when cobbler does Y</li>
+<li> <a href="/manuals/2.4.0/5/5/2_-_Modules.html">Modules</a> -- extend Cobbler authentication, authorization, or serialization via plugins</li>
 </ul>
 
 
