Add SLES 11.1 to support matrix

--- a/manuals/2.4.0/1/1_-_Distribution_Support.html
+++ b/manuals/2.4.0/1/1_-_Distribution_Support.html
@@ -288,6 +288,16 @@ var WRInitTime=(new Date()).getTime();
   <td class="center span1"><i class="icon-wrench"></i></td>
  </tr>
  <tr>
+  <td class="span2"></td>
+  <td class="span2">SuSE Linux Enterprise Server 11.1</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+
+ <tr>
   <td colspan="7">VMware</td>
  </tr>
  <tr>
