--- a/manuals/2.4.0/3/1_-_Prerequisites.html
+++ b/manuals/2.4.0/3/1_-_Prerequisites.html
@@ -141,7 +141,7 @@ var WRInitTime=(new Date()).getTime();
 
 <h2>Cobbler-Web</h2>
 
-<p>Cobbler web only has the following requirements besides cobbler itself:</p>
+<p>Cobbler web has the following requirements besides cobbler itself:</p>
 
 <ul>
 <li>Django (python-django for Debian/Ubuntu)</li>
