--- a/manuals/index.html
+++ b/manuals/index.html
@@ -115,8 +115,8 @@ var WRInitTime=(new Date()).getTime();
 <h2>Cobbler Manuals</h2>
 
 <ul>
-<li><a href="/manuals/2.4.0">2.4.0 (current release: beta2)</a></li>
-<li><a href="/manuals/2.2.3">2.2.3 (current release: 2)</a></li>
+<li><a href="/manuals/2.4.0">2.4.x</a></li>
+<li><a href="/manuals/2.2.3">2.2.x</a></li>
 </ul>
 
 
