--- a/manuals/2.2.3/index.html
+++ b/manuals/2.2.3/index.html
@@ -112,7 +112,7 @@ var WRInitTime=(new Date()).getTime();
 
 
 <div id="wrap" class="container">
-<h2>Cobbler Manual - Version 2.2.3</h2>
+<h2>Cobbler Manual - Version 2.2.x</h2>
 
 <p><strong>NOTE:</strong> This manual is currently a work in progress. Links within pages will probably not work for a while, as we're cleaning up the docs. All of the links from this index should be good though, so come back here if you're having issues.</p>
 
