Add inventx to the list of Cobbler users

--- a/users.html
+++ b/users.html
@@ -241,6 +241,10 @@ var WRInitTime=(new Date()).getTime();
  
  
 
+  <div class="span3 userlogo"><a href="http://www.inventx.ch"><img src="/images/who/inventx_logo_sm.png" alt="" /></a></div>
+ 
+ 
+
  </div>
 </div>
 
