Another index fix to the 2.4 manual

--- a/manuals/2.4.0/3/3_-_Installing_From_Source.html
+++ b/manuals/2.4.0/3/3_-_Installing_From_Source.html
@@ -121,7 +121,7 @@ var WRInitTime=(new Date()).getTime();
 
 <p>The latest source code (it's all Python) is available through <a href="https://github.com/cobbler/cobbler">git</a>.</p>
 
-<p>Potential contributors should read the <a href="/manuals/2.4.0/8/Patch-process.html">Patch Process</a> section for details on contributing patches.</p>
+<p>Potential contributors should read the <a href="/manuals/2.4.0/8/2_-_Patch-process.html">Patch Process</a> section for details on contributing patches.</p>
 
 <h3>Getting the Code</h3>
 
