--- a/manuals/2.4.0/8/1_-_Development-environment-tips.html
+++ b/manuals/2.4.0/8/1_-_Development-environment-tips.html
@@ -185,7 +185,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/8/Development-environment-tips.html">Development-environment-tips</a></li><li><a href="/manuals/2.4.0/8/Patch-process.html">Patch-process</a></li><li><a href="/manuals/2.4.0/8/Xmlrpc.html">Xmlrpc</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/8/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/2.4.0/8/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/2.4.0/8/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
   </div>
  </div>
 </div>
