--- a/manuals/2.4.0/9_-_Troubleshooting.html
+++ b/manuals/2.4.0/9_-_Troubleshooting.html
@@ -439,7 +439,7 @@ MemoryError
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/9/Debugging-tips.html">Debugging-tips</a></li><li><a href="/manuals/2.4.0/9/Hints-redhat.html">Hints-redhat</a></li><li><a href="/manuals/2.4.0/9/Virtualization-troubleshooting.html">Virtualization-troubleshooting</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/9/1_-_Debugging-tips.html">1 - Debugging-tips</a></li><li><a href="/manuals/2.4.0/9/2_-_Hints-redhat.html">2 - Hints-redhat</a></li><li><a href="/manuals/2.4.0/9/3_-_Virtualization-troubleshooting.html">3 - Virtualization-troubleshooting</a></li></ul></div>
   </div>
  </div>
 </div>
