--- a/manuals/2.4.0/8_-_Developer_Documentation.html
+++ b/manuals/2.4.0/8_-_Developer_Documentation.html
@@ -133,7 +133,7 @@ var WRInitTime=(new Date()).getTime();
 <p>Various information about how to get involved with the Cobbler project.</p>
 
 <ul>
-<li> <a href="/manuals/2.4.0/8/Patch-process.html">Patch Process</a> -- How to contribute code/patches/docs</li>
+<li> <a href="/manuals/2.4.0/8/2_-_Patch-process.html">Patch Process</a> -- How to contribute code/patches/docs</li>
 <li> <strong>UNDEFINED REFERENCE (Development Environment Tips, meta=2.4.0)</strong> -- How to get your development setup going</li>
 </ul>
 
@@ -181,7 +181,7 @@ and examples, so you're expected to be able to read Python.  That should be ok t
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/8/Development-environment-tips.html">Development-environment-tips</a></li><li><a href="/manuals/2.4.0/8/Patch-process.html">Patch-process</a></li><li><a href="/manuals/2.4.0/8/Xmlrpc.html">Xmlrpc</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/8/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/2.4.0/8/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/2.4.0/8/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
   </div>
  </div>
 </div>
