Add more release notes to manual

--- a/manuals/2.2.3/1/1_-_Release_Notes.html
+++ b/manuals/2.2.3/1/1_-_Release_Notes.html
@@ -117,9 +117,59 @@ var WRInitTime=(new Date()).getTime();
    <h1>Release Notes</h1>
 <h2>2.2.3</h2>
 
+<h3>Features</h3>
+
+<h3>Bugfixes</h3>
+
+<h3>Upgrade notes</h3>
+
+<p>None.</p>
+
 <h2>2.2.2</h2>
 
+<h3>Features</h3>
+
+<ul>
+<li>Initial support for configurable on-disk format on virtual disks</li>
+<li>Add support for Fedora16, rawhide, OpenSuSE 11.x and 12.1</li>
+<li>Several small webui improvements</li>
+</ul>
+
+
+<h3>Bugfixes</h3>
+
+<ul>
+<li>Serveral webui fixes</li>
+<li>Overriding nameservers via kopts in buildiso now works</li>
+<li>Images without distro caused a stack dump in pxegen</li>
+<li>Code cleanup and improvements in distro importers</li>
+<li>Code cleanup sub_process handling</li>
+<li>Old import modules are removed</li>
+<li>Duplicate kopts in buildiso are now supported</li>
+<li>Several bugfixes to koan</li>
+</ul>
+
+
+<h3>Upgrade notes</h3>
+
+<p>None</p>
+
 <h2>2.2.1</h2>
+
+<h3>Features</h3>
+
+<ul>
+<li>Add support for systemd in the Cobbler spec file</li>
+</ul>
+
+
+<h3>Bugfixes</h3>
+
+<p>None.</p>
+
+<h3>Upgrade notes</h3>
+
+<p>None.</p>
 
 <h2>2.2.0</h2>
 
