Add release notes to manual

--- a/manuals/2.4.0/1_-_About_Cobbler.html
+++ b/manuals/2.4.0/1_-_About_Cobbler.html
@@ -145,7 +145,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/1/1_-_Distribution_Support.html">1 - Distribution Support</a></li><li><a href="/manuals/2.4.0/1/2_-_Whats_New.html">2 - Whats New</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.4.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li></ul></div>
   </div>
  </div>
 </div>
