--- a/manuals/2.4.0/1/2_-_Distribution_Support.html
+++ b/manuals/2.4.0/1/2_-_Distribution_Support.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Cobbler development team" />
 
-   <title>What's New</title>
+   <title>Distribution Support</title>
 
    <!-- CSS -->
    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
@@ -113,61 +113,246 @@ var WRInitTime=(new Date()).getTime();
 <div id="wrap" class="container">
  <div class="row">
   <div class="span8">
-<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0">2.4.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">What's New</li></ul>
-   <h1>What's New</h1>
-<p>Cobbler 2.4.0 introduces many new features, as well as fixing several bugs from the 2.2.3 series.</p>
+<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0">2.4.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">Distribution Support</li></ul>
+   <h1>Distribution Support</h1>
+<p>Cobbler currently supports importing a wide array of distributions from many vendors. However, since Cobbler has a history rooted in Red Hat based distributions, support for them is definitely the strongest. For others, the level of support varies from very good to requiring a lot of manual steps to get things working smoothly.</p>
 
-<h2>New Features</h2>
+<p>Here is the full list of supported distributions.</p>
 
-<ul>
-<li><a href="/manuals/2.4.0/4/3/1_-_Dynamic_Settings.html">Dynamic Settings</a>, which allow settings for cobblerd to be modified on the fly without a restart of teh daemon.</li>
-<li><a href="/manuals/2.4.0/4/2/3_-_Distro_Signatures.html">Distro Signatures</a>, which will allow support for newer distro versions to be added without a complete Cobbler upgrade.</li>
-<li><a href="/manuals/2.4.0/5/1/4_-_Bonded_Bridging.html">Advanced Networking - Bonded Bridging</a></li>
-<li>Web GUI improvments, such as using tabs for each control category.</li>
-<li>koan additions:
+<p>Key:</p>
 
 <ul>
-<li>Support for OpenVZ containers as a virtualization type.</li>
-<li>Support for custom LVM logical volume names.</li>
-<li>Support for qcow2/vmdk/raw image creation for virtualization files.</li>
-<li>Added the --virt-pxe-boot option to force PXE booting of virtual guests.</li>
-</ul>
-</li>
-<li>Better ubuntu support:
-
-<ul>
-<li>Support for precise and quantal.</li>
-<li>New default preseed, with support for using snippets in the late/early commands.</li>
-</ul>
-</li>
-<li>Many minor fixes and improvements:
-
-<ul>
-<li>Support for PEERDNS=no in ifcfg files (for RHEL and clones).</li>
-<li>Support for standard format (YYYYMMDDXX) for bind zone files.</li>
-<li>Puppet snippets/triggers use new puppet 3.0 cli syntax.</li>
-<li>Support for LDAP client certificates.</li>
-<li>Better template error logging.</li>
-<li>Cobbler loaders are now hosted at http://cobbler.github.com/loaders.</li>
-<li>New systemctl script.</li>
-</ul>
-</li>
-<li>Experimental/tech previews:
-
-<ul>
-<li>Support for MySQL as a custom backend: <a href="/manuals/2.4.0/5/18/3_-_MySQL.html">Alternative Storage Backends - MySQL</a>.</li>
-</ul>
-</li>
+ <li><i class="icon-ok-sign text-success"></i> Fully supported</li>
+ <li><i class="icon-wrench"></i> Some support, not 100%</li>
+ <li><i class="icon-ban-circle text-error"></i> Not supported, or significant manual action required</li>
 </ul>
 
 
-<h2>Major Bug Fixes</h2>
 
-<ul>
-<li>Reworked --available-as to use filter lists to limit file downloads.</li>
-<li>Tons of koan fixes, especially when using older versions of python-virtinst.</li>
-<li>Django 1.4 deprecation fixes.</li>
-</ul>
+
+<table class="table table-hover">
+ <tr>
+  <td class=""></td>
+  <td class=""></td>
+  <td class="center span1">Import</td>
+  <td class="center span1">Import<br/>--available-as</td>
+  <td class="center span1">PXE</td>
+  <td class="center span1">Build ISO</td>
+  <td class="center span1">Snippets</td>
+ </tr>
+ <tr>
+  <td colspan="7">Red Hat</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Fedora 16</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Fedora 17</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Fedora 18 (beta)</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">RHEL/CentOS 4</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">RHEL/CentOS 5</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">RHEL/CentOS 6</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td colspan="7">Ubuntu</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Oneiric</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Precise</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Quantal</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td colspan="7">Debian</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">Squeeze</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td colspan="7">SuSE</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 11.2</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 11.3</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 11.4</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 12.1</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 12.2</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td colspan="7">VMware</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">ESX 4</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">ESXi 4</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">ESXi 5</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+ </tr>
+ <tr>
+  <td colspan="7">FreeBSD</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">8.2</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">8.3</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">9.0</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+ </tr>
+</table>
+
+
+
+
+<div class="alert alert-info alert-block"><b>Note:</b> This list does not include support for images, which can be just about any OS.</div>
 
 
      <hr>
@@ -190,7 +375,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/1/1_-_Distribution_Support.html">1 - Distribution Support</a></li><li><a href="/manuals/2.4.0/1/2_-_Whats_New.html">2 - Whats New</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.4.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.4.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li></ul></div>
   </div>
  </div>
 </div>
