--- a/manuals/2.4.0/1/2_-_Distribution_Support.html
+++ b/manuals/2.4.0/1/2_-_Distribution_Support.html
@@ -294,6 +294,15 @@ var WRInitTime=(new Date()).getTime();
   <td class="center span1"><i class="icon-wrench"></i></td>
  </tr>
  <tr>
+  <td class="span2"></td>
+  <td class="span2">Wheezy</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
   <td colspan="7">SuSE</td>
  </tr>
  <tr>
