Add iventx to users

--- a/index.html
+++ b/index.html
@@ -350,6 +350,10 @@ $('document').ready(function() {
      <div><img class="carousel-img" src="/images/who/widexs_logo_sm.png" alt="" /></div>
     </div>
 
+    <div class="item">
+     <div><img class="carousel-img" src="/images/who/iventx_logo_sm.png" alt="" /></div>
+    </div>
+
    </div>
   </div>
  </div>
