--- a/manuals/developer/1_-_Development-environment-tips.html
+++ b/manuals/developer/1_-_Development-environment-tips.html
@@ -185,7 +185,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/developer/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li><li><a href="/manuals/developer/1_1_Bla.html">1 1 Bla</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/developer/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
   </div>
  </div>
 </div>
