Minor doc improvement

--- a/manuals/2.4.0/8/1_-_Development-environment-tips.html
+++ b/manuals/2.4.0/8/1_-_Development-environment-tips.html
@@ -121,7 +121,7 @@ var WRInitTime=(new Date()).getTime();
 
 <p>If using CentOS, install the appropriate EPEL rpm.</p>
 
-<pre><code>Ex: http://download.fedoraproject.org/pub/epel/6/i386/epel-release-6-5.noarch.rpm
+<pre><code>rpm -i http://download.fedoraproject.org/pub/epel/6/i386/epel-release-6-5.noarch.rpm
 </code></pre>
 
 <p>Install dependencies:</p>
